--- a/Services/Catalog/FreeCourse.Services.Catalog/FreeCourse.Services.Catalog.csproj
+++ b/Services/Catalog/FreeCourse.Services.Catalog/FreeCourse.Services.Catalog.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.4"/>
         <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.2" />
         <PackageReference Include="MongoDB.Driver" Version="2.26.0" />
